优化README文档和GitHub Actions打包配置